# obs-auto-edit-and-upload-video

./: .gitignore  CMakeLists.txt  buildspec.json
.github/scripts/: Build-Windows.ps1  build-macos
.github/scripts/utils.zsh/: setup_ubuntu
.github/workflows/: push.yaml  release.yml
cmake/common/: buildspec_common.cmake
data/locale/: en-US.ini
docs/: release.md
docs/superpowers/plans/: 2026-05-08-rizzytos-auto-edit.md  2026-05-09-obs-plugin-improvements.md  2026-05-10-windows-release-packaging.md
docs/superpowers/specs/: 2026-05-08-rizzytos-auto-edit-design.md  2026-05-09-obs-plugin-improvements-design.md  2026-05-10-windows-release-packaging-design.md
installer/: rizzytos-auto-edit.iss
scripts/: build-installer.ps1  prepare-release.ps1
src/: plugin-launcher.cpp  plugin-launcher.h  plugin-main.cpp  plugin-recorder.cpp  plugin-recorder.h  plugin-settings.cpp  plugin-settings.h  plugin-ui.cpp  plugin-ui.h  youtube-auth.cpp  youtube-auth.h  youtube-uploader.cpp  youtube-uploader.h
tests/worker/: test_args.cpp  test_concat.cpp  test_progress.cpp
worker/: args.cpp  args.h  concat.cpp  concat.h  main.cpp  progress.cpp  progress.h
